<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".AboutActivity">
    <!-- activity title -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/about_activity"
            android:textColor="@color/color_black"
            android:textSize="30sp" />

    </RelativeLayout>
    <!-- content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:padding="14dp"
            android:rowCount="5">
            <!-- about app 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/color_white"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/header1"
                    android:textAlignment="textStart"
                    android:textColor="@color/color10"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins"
                    android:justificationMode="inter_word"
                    android:text="@string/about_app1"
                    android:textColor="@color/color_black"
                    android:textSize="18sp"
                    tools:targetApi="o" />
            </androidx.cardview.widget.CardView>
            <!-- divider line -->
            <androidx.cardview.widget.CardView
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/color_white"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_dgrey" />

            </androidx.cardview.widget.CardView>
            <!-- about app 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="410dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/color_white"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/header2"
                    android:textAlignment="textStart"
                    android:textColor="@color/color10"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins"
                    android:justificationMode="inter_word"
                    android:text="@string/about_app2"
                    android:textColor="@color/color_black"
                    android:textSize="18sp"
                    tools:targetApi="o" />
            </androidx.cardview.widget.CardView>
            <!-- divider line -->
            <androidx.cardview.widget.CardView
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/color_white"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_dgrey" />

            </androidx.cardview.widget.CardView>
            <!-- about app 3 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="470dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/color_white"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/header3"
                    android:textAlignment="textStart"
                    android:textColor="@color/color10"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins"
                    android:justificationMode="inter_word"
                    android:text="@string/about_app3"
                    android:textColor="@color/color_black"
                    android:textSize="18sp"
                    tools:targetApi="o" />
            </androidx.cardview.widget.CardView>
            <!-- divider line -->
            <androidx.cardview.widget.CardView
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/color_white"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_dgrey" />

            </androidx.cardview.widget.CardView>
            <!-- table -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/color_white"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/header4"
                    android:textAlignment="textStart"
                    android:textColor="@color/color10"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp">

                    <TableRow>

                        <TextView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/color_dgrey"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:text="@string/range"
                            android:textColor="@color/color_black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/color_dgrey"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:text="@string/description"
                            android:textColor="@color/color_black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/color_white"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:text="@string/range_1"
                            android:textColor="@color/color_black"
                            android:textSize="15sp"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/color_white"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:text="@string/description_1"
                            android:textAlignment="textStart"
                            android:textColor="@color/color_black"
                            android:textSize="15sp"
                            tools:ignore="RtlCompat,RtlSymmetry" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/color_white"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:text="@string/range_2"
                            android:textColor="@color/color_black"
                            android:textSize="15sp"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/color_white"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:text="@string/description_2"
                            android:textAlignment="textStart"
                            android:textColor="@color/color_black"
                            android:textSize="15sp"
                            tools:ignore="RtlCompat,RtlSymmetry" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/color_white"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:text="@string/range_3"
                            android:textColor="@color/color_black"
                            android:textSize="15sp"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/color_white"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:text="@string/description_3"
                            android:textAlignment="textStart"
                            android:textColor="@color/color_black"
                            android:textSize="15sp"
                            tools:ignore="RtlCompat,RtlSymmetry" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/color_white"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:text="@string/range_4"
                            android:textColor="@color/color_black"
                            android:textSize="15sp"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/color_white"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:text="@string/description_4"
                            android:textAlignment="textStart"
                            android:textColor="@color/color_black"
                            android:textSize="15sp"
                            tools:ignore="RtlCompat,RtlSymmetry" />
                    </TableRow>
                </TableLayout>

            </androidx.cardview.widget.CardView>
        </GridLayout>
    </ScrollView>
</LinearLayout>