<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".HomeActivity">
    <!-- icon and app name -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_car_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:textSize="23sp" />
    </RelativeLayout>
    <!-- main menu -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/tvoc_readings"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/color_white"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_ruler"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/reading_activity"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/reading_activity_extra"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:textSize="18sp" />

                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/color_white"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_dgrey" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/about_app"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/color_white"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_stufy"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/about_activity"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/about_activity_extra"
                        android:textAlignment="center"
                        android:textColor="@color/color_black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>
    <!-- exit btn -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_btn_exit"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/exit"
            android:textColor="@color/color_white"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>